ecmascript/parser/tests/test262-error-references/fail/28520880d460c4f9.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/28520880d460c4f9.js:1:13
  |
1 | ({a: b = 0, c = 0});
  |             ^^^^^

